--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,9 +17,10 @@ body {
     min-height: 100vh;
 }
 
-.skeleton>:first-child {
+/* .skeleton>:first-child {
     max-height: 1fr;
-}
+} */
+
 .skeleton>div {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
