--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,10 +17,6 @@ body {
     min-height: 100vh;
 }
 
-/* .skeleton>:first-child {
-    max-height: 1fr;
-} */
-
 .skeleton>div {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
@@ -42,4 +38,11 @@ body {
 
 .block-editor-area>div {
     border: 1px solid black;
+}
+
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
 }
