--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .block-editor-area>div {
-    border: 1px solid grey;
+    border: 1px solid rgba(128, 128, 128, 0.2);
     margin-bottom: 0;
     margin-top: 0;
     padding: 0;
@@ -53,7 +53,7 @@ body {
 .navbar{
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
     margin-bottom: 0;
 }
 
