--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif !important;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
 }
+
 body {
     min-height: 100vh;
     display: flex;
@@ -28,8 +29,9 @@ body {
 .block-editor-area {
     display: flex;
     width: 100%;
-    
+
 }
+
 .block-editor-area>div {
     margin: 5px;
     padding: 5%;
@@ -50,26 +52,31 @@ body {
     padding: 0;
 }
 
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
     margin-bottom: 0;
 }
 
-.sidebar{
+.sidebar {
     /* height: 861px; */
     height: 901px;
     width: 360px;
     overflow-y: auto;
 }
 
-.footer{
+.footer {
     margin-top: 0;
-    
+
 }
 
-.post-item{
+.post-item {
     display: flex;
     justify-content: space-between;
+}
+
+.wp-block-custom-card-best-selling{
+    width: 10px;
+    border: 1px solid black;
 }
